# Conqueror

./: .gitignore  CMakeLists.txt  icon.svg.import  project.godot  rts_game.gdextension  rts_game.gdextension.uid
assets/: cursor.png.import  down-arrow.png.import
assets/buildings/barracks/: barracks.glb  barracks.glb.import  barracks_0.png.import  barracks_1.png.import  barracks_2.png.import  barracks_3.png.import
assets/buildings/power/: power.glb.import
assets/textures/: water_normal_1.png.import  water_normal_2.png.import
assets/textures/terrain/dirt/: dirt_albedo.jpg.import  dirt_ao.jpg.import  dirt_normal.jpg.import  dirt_roughness.jpg.import
assets/textures/terrain/grass/: grass_albedo.jpg.import  grass_ao.jpg.import  grass_normal.jpg.import  grass_roughness.jpg.import
assets/textures/terrain/moss/: moss_albedo.jpg.import  moss_normal.jpg.import  moss_roughness.jpg.import
assets/textures/terrain/rock/: rock_albedo.jpg.import  rock_ao.jpg.import  rock_normal.jpg.import  rock_roughness.jpg.import
assets/textures/terrain/sand/: sand_albedo.jpg.import  sand_ao.jpg.import  sand_normal.jpg.import  sand_roughness.jpg.import
assets/textures/terrain/snow/: snow_albedo.jpg.import  snow_ao.jpg.import  snow_normal.jpg.import  snow_roughness.jpg.import
assets/textures/terrain/water/: water_normal_1.png.import  water_normal_2.png.import
assets/textures/trees/: tree_part3.glb.import  tree_part3_0.png.import  tree_part3_1.png.import  tree_part3_2.png.import  tree_part3_3.png.import  tree_part3_4.jpg.import  tree_part3_5.png.import  tree_part4.glb.import  tree_part4_0.png.import  tree_part4_1.png.import  tree_part4_2.png.import  tree_part4_3.png.import  tree_part4_4.jpg.import  tree_part4_5.png.import
assets/textures/vegetation/bark/: bark_albedo.jpg.import  bark_normal.jpg.import  bark_roughness.jpg.import
assets/textures/vegetation/foliage/: foliage_albedo.jpg.import  foliage_normal.jpg.import
assets/textures/vehicles/bulldozer/: metal_plate_albedo.jpg.import  metal_plate_metallic.jpg.import  metal_plate_normal.jpg.import  metal_plate_roughness.jpg.import  rubber_albedo.jpg.import  rubber_normal.jpg.import  rubber_roughness.jpg.import  rusty_metal_albedo.jpg.import  rusty_metal_metallic.jpg.import  rusty_metal_normal.jpg.import  rusty_metal_roughness.jpg.import  yellow_paint_albedo.jpg.import  yellow_paint_normal.jpg.import  yellow_paint_roughness.jpg.import
assets/vehicles/bulldozer/: bulldozer.glb.import  bulldozer_0.png.import
include/: Barracks.h  Building.h  Bulldozer.h  CommandCenter.h  FloorSnapper.h  FlowFieldManager.h  GameManager.h  RTSCamera.h  SelectionManager.h  TerrainGenerator.h  Unit.h  UnitSpawner.h  Vehicle.h
scenes/: Building.tscn  Main.tscn  Unit.tscn
scenes/ui/: SelectionRect.tscn
scripts/: fps_counter.gd  fps_counter.gd.uid
shaders/: grass.gdshader  grass.gdshader.uid  terrain.gdshader  terrain.gdshader.uid  water.gdshader  water.gdshader.uid
src/: Barracks.cpp  Building.cpp  Bulldozer.cpp  CommandCenter.cpp  FloorSnapper.cpp  FlowFieldManager.cpp  GameManager.cpp  RTSCamera.cpp  RegisterExtensions.cpp  SelectionManager.cpp  TerrainGenerator.cpp  Unit.cpp  UnitSpawner.cpp  Vehicle.cpp
